security/np/allow-external-traffic.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-external
  namespace: webinar
spec:
  podSelector:
    matchLabels:
      app: cosmoscats
  ingress:
  - ports:
    - port: 80
    from: []
